--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -50,7 +50,7 @@
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/foodspring/jobs/4368618002'>Job Application for Senior Business Intelligence Analyst (f/m/d) at foodspring</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/foodspring/jobs/4368618002'>Job Application for Senior Business Intelligence Analyst (f/m/d) at foodspring</a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -102,7 +102,7 @@ Internet Solutions Corporation.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumup/jobs/4367385002'>Job Application for Business Intelligence Analyst at SumUp</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sumup/jobs/4367385002'>Job Application for Business Intelligence Analyst at SumUp</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -234,7 +234,7 @@ developing and implementing metrics and reporting to improve our business and
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/pitchbook/job/oDwBafwE'>PitchBook Data, Inc. Careers - Senior Business Intelligence Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/pitchbook/job/oDwBafwE'>PitchBook Data, Inc. Careers - Senior Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">Seattle Seattle San Francisco New York London Mumbai</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -250,7 +250,7 @@ developing and implementing metrics and reporting to improve our business and
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999691641639-business-intelligence-analyst'>Adevinta Business Intelligence Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999691641639-business-intelligence-analyst'>Adevinta Business Intelligence Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -267,7 +267,7 @@ Solutions Architect to design and build the firm's Data Warehouse and Business?.
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/opentable/jobs/4365000002'>Job Application for Principal Business Intelligence Developer at OpenTable</a></h5> 
+<h5><a href='https://boards.greenhouse.io/opentable/jobs/4365000002'>Job Application for Principal Business Intelligence Developer at OpenTable</a></h5> 
 <p><span class="badge badge-light">Los Angeles</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -275,7 +275,7 @@ Solutions Architect to design and build the firm's Data Warehouse and Business?.
 <p><span class="badge badge-light">Texas, United States</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://paltron1.join.com/jobs/249776-consultant-business-intelligence-m-w-d'>Job @ PALTRON (Herten): Consultant Business Intell... | JOIN</a></h5> 
+<h5><a href='https://paltron1.join.com/jobs/249776-consultant-business-intelligence-m-w-d'>Job @ PALTRON (Herten): Consultant Business Intell... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>vor 3 Tagen ... PALTRON GmbH has a job opening for Consultant Business Intelligence (m/w/d) 
 in Herten (published: 12.07.2019). Apply now or check the other available jobs.</p>
@@ -318,7 +318,7 @@ Mavenlink?...</p>
 <p><span class="badge badge-light">Redwood City California</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ninjavan/95d5d16e-5a80-481b-ad20-717e66d48ea6'>Ninja Van - Business Intelligence &amp; Project Management - Solution</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ninjavan/95d5d16e-5a80-481b-ad20-717e66d48ea6'>Ninja Van - Business Intelligence &amp; Project Management - Solution</a></h5> 
 <p><span class="badge badge-light">Jakarta, Indonesia</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
